--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="school"></section>
     <section class="student"></section>
-    <main><h2>EDUCATION IS THE KEY TO SUCCESS</h2></main>
+    <main><h2>EDUCATION IS THE KEY TO SCCESS</h2></main>
     <section class="time"></section>
     <section class="alumni"></section>
     <footer>
